--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,25 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 2rem;
   text-align: center;
 }
+.tit_section.s2 {
+  font-size: 24px;
+  color: var(--txt_cta_lightblue);
+  position: relative;
+}
+.tit_section.s2::before, .tit_section.s2::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 100%;
+  height: 1px;
+  background-color: #CADFE0;
+  z-index: -1;
+}
+.tit_section.s2::after {
+  background-color: #FFF;
+  width: 400px;
+}
 
 .s_texture {
   position: relative;
@@ -82,6 +101,28 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   padding: 0 20px;
   box-sizing: border-box;
+}
+
+.swiper-button-next, .swiper-button-prev {
+  background-color: var(--bg_cta_lightblue);
+  border-radius: 100px;
+  width: 40px;
+  height: 40px;
+  top: 45%;
+}
+
+.swiper-button-next:after, .swiper-button-prev:after {
+  color: var(--txt_cta_light);
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.swiper-button-next {
+  right: 20px;
+}
+
+.swiper-button-prev {
+  left: 20px;
 }
 
 .c_cta {
@@ -129,6 +170,17 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 16px;
   font-weight: 700;
   padding: 4px 12px;
+}
+.btn.link {
+  background-color: transparent;
+  color: var(--txt_cta_lightblue);
+  text-decoration: underline;
+  font-weight: 400;
+}
+.btn.leermas {
+  background-color: transparent;
+  color: var(--txt_cta_lightblue);
+  padding: 10px;
 }
 .btn::before {
   content: "";
@@ -317,8 +369,8 @@ header .header_nav .navbar ul li .submenu a::before {
 }
 header .header_nav .navbar ul li .cont_search {
   position: absolute;
-  right: 0;
-  top: 10px;
+  right: 40px;
+  top: -17px;
   display: flex;
   align-items: center;
   background-color: var(--bg_section);
@@ -327,6 +379,12 @@ header .header_nav .navbar ul li .cont_search {
   padding: 8px;
   border-radius: 24px;
   display: none;
+  opacity: 0;
+  transition: 300ms ease;
+}
+header .header_nav .navbar ul li .cont_search.active {
+  opacity: 1;
+  display: flex;
 }
 header .header_nav .navbar ul li .cont_search input {
   outline: 0;
@@ -384,7 +442,7 @@ header .header_nav.active {
 .spacer {
   display: block;
   width: 100%;
-  height: 130px;
+  height: 128px;
 }
 
 .label_mobile {
@@ -698,7 +756,10 @@ footer .subfooter {
 }
 
 .s_nuestros_serv {
-  padding: 80px 0 130px;
+  padding: 80px 0 90px;
+}
+.s_nuestros_serv .tit_section {
+  margin: 20px 0 40px;
 }
 
 .c_nuestros_serv {
@@ -748,14 +809,411 @@ footer .subfooter {
   color: var(--txt_cta_light);
 }
 .card_serv .txt_serv .btn {
+  padding: 6px 20px;
   margin: 0 auto -41px;
+  opacity: 0;
   transition: 300ms ease-out;
 }
 .card_serv:hover picture:before {
   opacity: 1;
 }
 .card_serv:hover .btn {
-  margin: 0 auto 10px;
+  opacity: 1;
+  margin: 0 auto 20px;
+}
+
+.s_blog {
+  background-color: #F4F4F4;
+  padding: 160px 0 100px;
+  box-sizing: border-box;
+}
+
+.c_blog {
+  display: grid;
+  grid-template-columns: minmax(320px, 1fr) 1fr;
+  gap: 20px;
+  align-items: stretch;
+}
+.c_blog .col_title {
+  background: #FFFFFF;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+  position: relative;
+}
+.c_blog .col_title::before {
+  content: "";
+  position: absolute;
+  right: -30px;
+  height: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  border-left: 30px solid #FFF;
+}
+.c_blog .col_title picture {
+  display: inline;
+  border-radius: 100px;
+  border: 1px solid #282828;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 60px;
+  padding: 14px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+.c_blog .col_title picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.c_blog .col_title h2 {
+  font-size: 30px;
+  text-align: center;
+  color: var(--txt_cuerpo);
+  text-align: center;
+  line-height: 1.2;
+}
+.c_blog .col_slider_notas {
+  max-width: 830px;
+  padding: 0 40px;
+  box-sizing: border-box;
+  position: relative;
+}
+.c_blog .col_slider_notas .swiper-slide {
+  width: 100%;
+  flex-direction: column;
+  background-color: #FFF;
+  border-radius: 6px;
+  overflow: hidden;
+}
+.c_blog .col_slider_notas .swiper-slide .img_nota {
+  display: inline-block;
+  width: 100%;
+}
+.c_blog .col_slider_notas .swiper-slide .img_nota img {
+  max-height: 220px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.c_blog .col_slider_notas .swiper-slide .card_info_nota {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+}
+.c_blog .col_slider_notas .swiper-slide .card_info_nota .categoria {
+  color: var(--txt_cta_lightblue);
+}
+.c_blog .col_slider_notas .swiper-slide .card_info_nota .fecha {
+  color: #9F9F9F;
+}
+.c_blog .col_slider_notas .swiper-slide .title_nota {
+  margin: 10px 0 0;
+  text-align: left;
+  font-size: 16px;
+  padding: 0 10px;
+}
+.c_blog .col_slider_notas .swiper-slide .c_cta {
+  padding: 0;
+  width: 100%;
+}
+.c_blog .col_slider_notas .swiper-slide .container_info {
+  padding: 10px 20px;
+  box-sizing: border-box;
+}
+
+.s_club_beneficios {
+  width: 100%;
+  background: linear-gradient(0deg, rgba(2, 31, 44, 0.92), rgba(2, 31, 44, 0.92)), linear-gradient(0deg, #021F2C, #021F2C), url(../images/diseno/01-home/img_hero_bg.png) no-repeat center;
+  background-blend-mode: normal, color, normal;
+  width: 100%;
+  background-size: cover;
+  position: relative;
+  padding: 60px 0;
+  box-sizing: border-box;
+  min-height: 380px;
+}
+.s_club_beneficios::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 400px;
+  height: 100%;
+  background: url("../images/diseno/01-home/lineas.svg") no-repeat center left;
+  background-size: cover;
+  opacity: 0.5;
+}
+.s_club_beneficios .c_club_bene {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 40px;
+  position: relative;
+}
+.s_club_beneficios .c_club_bene h2 {
+  text-align: left;
+  color: var(--txt_cuerpo_light);
+  font-size: 60px;
+  margin: 0 0 20px;
+}
+.s_club_beneficios .c_club_bene h2 span {
+  color: var(--color_pri);
+}
+.s_club_beneficios .tarjeta_club {
+  display: inline-block;
+  position: absolute;
+  bottom: -50%;
+}
+
+.cont_items_bene {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+  align-items: center;
+  margin: 0 0 30px;
+}
+.cont_items_bene .itm_bene {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: var(--txt_cuerpo_light);
+  gap: 20px;
+}
+.cont_items_bene .itm_bene picture {
+  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+  background-color: var(--bg_cta_light);
+  width: 80px;
+  height: 80px;
+  padding: 14px;
+  box-sizing: border-box;
+}
+.cont_items_bene .itm_bene picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.s_testimonios {
+  padding: 60px 0 100px;
+  box-sizing: border-box;
+}
+
+.c_testimonios {
+  position: relative;
+  padding: 0 40px;
+  box-sizing: border-box;
+}
+.c_testimonios .swiper-slide {
+  flex-direction: column;
+}
+.c_testimonios .swiper-slide .img_testimonio, .c_testimonios .swiper-slide .video_testimonio {
+  width: 100%;
+  border-radius: 8px;
+  overflow: hidden;
+  position: relative;
+  background-color: #F0F6F9;
+  min-height: 192px;
+}
+.c_testimonios .swiper-slide .img_testimonio img, .c_testimonios .swiper-slide .video_testimonio img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-height: 192px;
+}
+.c_testimonios .swiper-slide .video_testimonio {
+  position: relative;
+  cursor: pointer;
+}
+.c_testimonios .swiper-slide .video_testimonio::before {
+  content: "\f04b";
+  font-family: "Font Awesome 5 Pro";
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+  background-color: var(--color_pri);
+  inset: 0;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--txt_cta_light);
+  font-weight: 700;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.c_testimonios .swiper-slide .video_testimonio img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  min-height: 192px;
+}
+.c_testimonios .swiper-slide .img_testimonio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.c_testimonios .swiper-slide .img_testimonio img {
+  width: 160px;
+  height: 160px;
+  border-radius: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-height: 192px;
+  display: block;
+  margin: auto;
+}
+.c_testimonios .info_cta {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 14px;
+  box-sizing: border-box;
+  margin: 20px 0 0;
+  border-bottom: 1px solid #C4C4C4;
+  padding: 0 0 5px;
+}
+.c_testimonios .info_cta .name {
+  font-weight: 700;
+}
+.c_testimonios .info_cta .leermas {
+  padding: 0;
+  font-size: 14px;
+  transition: 300ms ease;
+}
+.c_testimonios .info_cta .leermas:hover {
+  text-decoration: underline;
+}
+.c_testimonios .quotes {
+  font-size: 14px;
+  position: relative;
+  text-align: left;
+  line-height: 1.3;
+  box-sizing: border-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  /* number of lines to show */
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.cont_desc_quote {
+  padding: 30px;
+  box-sizing: border-box;
+  position: relative;
+}
+.cont_desc_quote::before {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 4px;
+  width: 24px;
+  height: 30px;
+  background: url("../images/diseno/01-home/quote.svg") no-repeat center;
+  background-size: contain;
+}
+
+.c_valoracion {
+  display: block;
+  max-width: 740px;
+  background: #FFFFFF;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+  padding: 26px 20px;
+  box-sizing: border-box;
+  margin: 40px auto 0;
+}
+.c_valoracion .cont_vsc {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+.c_valoracion .cont_vsc h5 {
+  font-size: 18px;
+  margin: 10px 0;
+  font-weight: 400;
+}
+.c_valoracion .cont_vsc .link {
+  font-size: 14px;
+}
+
+.c_porque_bl {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(216px, 1fr));
+  padding: 40px 0;
+  gap: 20px;
+  box-sizing: border-box;
+}
+.c_porque_bl .items_bl {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+.c_porque_bl .items_bl picture {
+  border-radius: 100px;
+  border: 1px solid var(--txt_cta_lightblue);
+  padding: 18px;
+  box-sizing: border-box;
+  width: 80px;
+  height: 80px;
+}
+.c_porque_bl .items_bl picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.w100_line {
+  position: relative;
+}
+.w100_line::before, .w100_line::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 100%;
+  height: 1px;
+  background-color: #CADFE0;
+  z-index: -1;
+}
+.w100_line::after {
+  background-color: #FFF;
+  width: 400px;
 }
 
 /* ****** */
