--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,6 +44,25 @@ h1, h2, h3, h4, h5, h6{
 .tit_section{
     font-size: 2rem;
     text-align: center;
+    &.s2{
+        font-size: 24px;
+        color: var(--txt_cta_lightblue);
+        position: relative;
+        &::before, &::after{
+            content: '';
+            position: absolute;
+            inset: 0;
+            margin: auto;
+            width: 100%;
+            height: 1px;
+            background-color: #CADFE0;
+            z-index: -1;
+        }
+        &::after{
+            background-color: #FFF;
+            width: 400px;
+        }
+    }
 }
 .s_texture{
     position: relative;
@@ -74,7 +93,24 @@ h1, h2, h3, h4, h5, h6{
     padding: 0 20px;
     box-sizing: border-box;
 }
-
+.swiper-button-next, .swiper-button-prev{
+    background-color: var(--bg_cta_lightblue);
+    border-radius: 100px;
+    width: 40px;
+    height: 40px;
+    top: 45%;
+}
+.swiper-button-next:after, .swiper-button-prev:after{
+    color: var(--txt_cta_light);
+    font-size: 24px;
+    font-weight: 700;
+}
+.swiper-button-next{
+    right: 20px;
+}
+.swiper-button-prev{
+    left: 20px;
+}
 .c_cta{
     display: flex;
     justify-content: center;
@@ -115,6 +151,17 @@ h1, h2, h3, h4, h5, h6{
         font-size: 16px;
         font-weight: 700;
         padding: 4px 12px;
+    }
+    &.link{
+        background-color: transparent;
+        color: var(--txt_cta_lightblue);
+        text-decoration: underline;
+        font-weight: 400;
+    }
+    &.leermas{
+        background-color: transparent;
+        color: var(--txt_cta_lightblue);
+        padding: 10px;
     }
     &::before{
         content: '';
@@ -314,8 +361,8 @@ header{
                 }
                 .cont_search{
                     position: absolute;
-                    right: 0;
-                    top: 10px;
+                    right: 40px;
+                    top: -17px;
                     display: flex;
                     align-items: center;
                     background-color: var(--bg_section);
@@ -324,6 +371,12 @@ header{
                     padding: 8px;
                     border-radius: 24px;
                     display: none;
+                    opacity: 0;
+                    transition: 300ms ease;
+                    &.active{
+                        opacity: 1;
+                        display: flex;
+                    }
                     input{
                         outline:0;
                         background-color: transparent;
@@ -385,7 +438,7 @@ header{
 .spacer{
     display: block;
     width: 100%;
-    height: 130px;
+    height: 128px;
 }
 .label_mobile{
     display: none;
@@ -692,7 +745,10 @@ footer{
 }
 
 .s_nuestros_serv{
-    padding: 80px 0 130px;
+    padding: 80px 0 90px;
+    .tit_section{
+        margin: 20px 0 40px;
+    }   
 }
 .c_nuestros_serv{
     display: grid;
@@ -737,7 +793,9 @@ footer{
             color: var(--txt_cta_light);
         }
         .btn{
+            padding: 6px 20px;
             margin: 0 auto -41px;
+            opacity: 0;
             transition: 300ms ease-out;
         }
     }
@@ -748,12 +806,403 @@ footer{
             }
         }
         .btn{
-            margin: 0 auto 10px;
+            opacity: 1;
+            margin: 0 auto 20px;
         }
     }
 }
 
+.s_blog{
+    background-color: #F4F4F4;
+    padding: 160px 0 100px;
+    box-sizing: border-box;
+}
+.c_blog{
+    display: grid;
+    grid-template-columns: minmax(320px, 1fr) 1fr;
+    gap: 20px;
+    align-items: stretch;
+    .col_title{
+        background: #FFFFFF;
+        border-radius: 6px;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
+        text-align: center;
+        padding: 20px;
+        box-sizing: border-box;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            right: -30px;
+            height: 0;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            border-top: 30px solid transparent;
+            border-bottom: 30px solid transparent;
+            border-left: 30px solid #FFF;
+        }
+        picture{
+            display: inline;
+            border-radius: 100px;
+            border: 1px solid #282828;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            max-width: 60px;
+            padding: 14px;
+            box-sizing: border-box;
+            margin: 0 auto;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+        h2{
+            font-size: 30px;
+            text-align: center;
+            color: var(--txt_cuerpo);
+            text-align: center;
+            line-height: 1.2;
+        }
+    }
+    .col_slider_notas{
+        max-width: 830px;
+        padding: 0 40px;
+        box-sizing: border-box;
+        position: relative;
+        .swiper-slide{
+            width: 100%;
+            flex-direction: column;
+            background-color: #FFF;
+            border-radius: 6px;
+            overflow: hidden;
+            .img_nota{
+                display: inline-block;
+                width: 100%;
+                img{
+                    max-height: 220px;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+            .card_info_nota{
+                width: 100%;
+                padding: 10px;
+                box-sizing: border-box;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                font-size: 14px;
+                .categoria{
+                    color: var(--txt_cta_lightblue);
+                }
+                .fecha{
+                   color:#9F9F9F; 
+                }
+            }
+            .title_nota{
+                margin:10px 0 0;
+                text-align: left;
+                font-size: 16px;
+                padding: 0 10px;
+            }
+            .c_cta{
+                padding: 0;
+                width: 100%;
+            }
+            .container_info{
+                padding: 10px 20px;
+                box-sizing: border-box;
+            }
+        }
+    }
+
+}
+
+.s_club_beneficios{
+    width: 100%;
+    background: linear-gradient(0deg, rgba(2, 31, 44, 0.92), rgba(2, 31, 44, 0.92)), linear-gradient(0deg, #021F2C, #021F2C), url(../images/diseno/01-home/img_hero_bg.png) no-repeat center;
+    background-blend-mode: normal, color, normal;
+    width: 100%;
+    background-size: cover;
+    position: relative;
+    padding: 60px 0;
+    box-sizing: border-box;
+    min-height: 380px;
+    &::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 400px;
+        height: 100%;
+        background: url('../images/diseno/01-home/lineas.svg') no-repeat center left;
+        background-size: cover;
+        opacity: .5;
+    }
+    .c_club_bene{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 40px;
+        position: relative;
+        h2{
+            text-align: left;
+            color: var(--txt_cuerpo_light);
+            font-size: 60px;
+            margin: 0 0 20px;
+            span{
+                color: var(--color_pri);
+            }
+        }
+    }
+    .tarjeta_club{
+        display: inline-block;
+        position: absolute;
+        bottom: -50%;
+    }
+}
+
+.cont_items_bene{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
+    align-items: center;
+    margin: 0 0 30px;
+    .itm_bene{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: var(--txt_cuerpo_light);
+        gap: 20px;
+        picture{
+            display: inline-block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 100px;
+            background-color: var(--bg_cta_light);
+            width: 80px;
+            height: 80px;
+            padding: 14px;
+            box-sizing: border-box;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+    }
+}
+
+.s_testimonios{
+    padding: 60px 0 100px;
+    box-sizing: border-box;
+}
+
+.c_testimonios{
+    position: relative;
+    padding: 0 40px;
+    box-sizing: border-box;
+    .swiper-slide{
+        flex-direction: column;
+        .img_testimonio, .video_testimonio{
+            width: 100%;
+            border-radius: 8px;
+            overflow: hidden;
+            position: relative;
+            background-color: #F0F6F9;
+            min-height: 192px;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                max-height: 192px;
+            }
+        }
+        .video_testimonio{
+            position: relative;
+            cursor: pointer;
+            &::before{
+                content: '\f04b';
+                font-family: 'Font Awesome 5 Pro';
+                position: absolute;
+                width: 50px;
+                height: 50px;
+                border-radius: 100px;
+                background-color: var(--color_pri);
+                inset: 0;
+                margin: auto;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: var(--txt_cta_light);
+                font-weight: 700;
+                user-select: none;
+            }
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                min-height: 192px;
+            }
+        }
+        .img_testimonio{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            img{
+                width: 160px;
+                height: 160px;
+                border-radius: 100px;
+                object-fit: cover;
+                max-height: 192px;
+                display: block;
+                margin: auto;
+            }
+        }
+    }
+    .info_cta{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        font-size: 14px;
+        box-sizing: border-box;
+        margin: 20px 0 0;
+        border-bottom: 1px solid #C4C4C4;
+        padding: 0 0 5px;
+        .name{
+            font-weight: 700;
+        }
+        .leermas{
+            padding: 0;
+            font-size: 14px;
+            transition: 300ms ease;
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+
+    }
+    .quotes{
+        font-size: 14px;
+        position: relative;
+        text-align: left;
+        line-height: 1.3;
+        box-sizing: border-box;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 3; /* number of lines to show */
+                line-clamp: 3; 
+        -webkit-box-orient: vertical;
+       
+    }
+}
+.cont_desc_quote{
+    padding: 30px;
+    box-sizing: border-box;
+    position: relative;
+    &::before{
+        content: '';
+        position: absolute;
+        left: 4px;
+        top: 4px;
+        width: 24px;
+        height: 30px;
+        background: url('../images/diseno/01-home/quote.svg') no-repeat center;
+        background-size: contain;
+    }
+}
+.c_valoracion{
+    display: block;
+    max-width: 740px;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+    padding: 26px 20px;
+    box-sizing: border-box;
+    margin: 40px auto 0;
+    .cont_vsc{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        h5{
+            font-size: 18px;
+            margin: 10px 0;
+            font-weight: 400;
+        }
+        .link{
+            font-size: 14px;
+        }
+    }
+}
+
+.c_porque_bl{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(216px, 1fr));
+    padding: 40px 0;
+    gap: 20px;
+    box-sizing: border-box;
+    .items_bl{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+        justify-content: center;
+        picture{
+            border-radius: 100px;
+            border: 1px solid var(--txt_cta_lightblue);
+            padding: 18px;
+            box-sizing: border-box;
+            width: 80px;
+            height: 80px;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+    }
+}
+.w100_line{
+    position: relative;
+    &::before, &::after{
+        content: '';
+        position: absolute;
+        inset: 0;
+        margin: auto;
+        width: 100%;
+        height: 1px;
+        background-color: #CADFE0;
+        z-index: -1;
+    }
+    &::after{
+        background-color: #FFF;
+        width: 400px;
+    }
+}
+
+
+
+
+
+
+
+
 /* ****** */
+
 
 
 
