--- a/css/style.css
+++ b/css/style.css
@@ -1216,6 +1216,43 @@ footer .subfooter {
   width: 400px;
 }
 
+/* INTERNA GRACIAS */
+.s_gracias {
+  padding: 80px 0;
+}
+
+.c_gracias {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.c_gracias picture {
+  display: inline-block;
+  margin: 0 auto;
+}
+.c_gracias picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.c_gracias h1 {
+  font-size: 40px;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0;
+  color: var(--txt_cta_lightblue);
+}
+.c_gracias h4 {
+  text-align: center;
+  font-weight: 400;
+  font-size: 18px;
+  max-width: 430px;
+  margin: 20px auto;
+  line-height: 1.4;
+}
+
 /* ****** */
 @media screen and (max-width: 1050px) {
   .spacer {
