--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1195,8 +1195,41 @@ footer{
 }
 
 
+/* INTERNA GRACIAS */
 
-
+.s_gracias{
+    padding: 80px 0;
+}
+.c_gracias{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    picture{
+        display: inline-block;
+        margin: 0 auto;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+    h1{
+        font-size: 40px;
+        text-transform: uppercase;
+        text-align: center;
+        margin: 0;
+        color: var(--txt_cta_lightblue);
+    }
+    h4{
+        text-align: center;
+        font-weight: 400;
+        font-size: 18px;
+        max-width: 430px;
+        margin: 20px auto;
+        line-height: 1.4;
+    }
+}
 
 
 
