--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,11 @@ h1 {
      object-fit: cover;
 }
 
+.cont_btn {
+  display: flex;
+  width: 100%;
+}
+
 .al_left {
   justify-content: flex-start;
 }
