--- a/sass/style.scss
+++ b/sass/style.scss
@@ -231,7 +231,10 @@ h1{
     height: 100%;
     object-fit: cover;
 }
-
+.cont_btn{
+    display: flex;
+    width: 100%;
+}
 .al_left{
     justify-content: flex-start;
 }
