--- a/css/style.css
+++ b/css/style.css
@@ -499,6 +499,11 @@ header .header_nav.active {
   cursor: pointer;
   padding: 0 8px;
   color: var(--icon_lightblue);
+  height: 20px;
+  display: inline-block;
+}
+.mobile_items a span {
+  font-size: 20px;
 }
 
 .spacer {
@@ -523,6 +528,7 @@ header .header_nav.active {
   color: var(--icon_lightblue);
 }
 .closeX span {
+  font-size: 28px;
   font-weight: 300;
 }
 
@@ -554,7 +560,7 @@ footer .s_footer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   align-items: flex-start;
-  gap: 40px;
+  gap: 30px;
   padding: 0 0 40px;
   box-sizing: border-box;
 }
@@ -589,7 +595,7 @@ footer h4 {
   position: relative;
 }
 footer h4::before {
-  content: "\f077";
+  content: "\f078";
   position: absolute;
   font-family: "Font Awesome 5 Pro";
   right: 0;
@@ -1681,6 +1687,30 @@ button[type=submit] {
   font-size: 24px;
 }
 
+.cont_search_mobile {
+  display: none;
+  width: 100%;
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: 60px 1fr;
+  align-items: center;
+  justify-content: center;
+  padding: 14px 0 0;
+}
+.cont_search_mobile input {
+  height: 36px;
+  border: 0;
+  outline: 0;
+  background-color: #efefef;
+  border-radius: 0 100px 100px 0;
+  padding: 8px;
+  box-sizing: border-box;
+}
+.cont_search_mobile button {
+  min-width: initial;
+  border-radius: 100px 0 0 100px;
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
@@ -2160,5 +2190,13 @@ RESPONSIVE DESIGN
 
   .cont_items_bene .itm_bene {
     text-align: left;
+  }
+
+  footer .tel_bl {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  footer .tel_bl span {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
