--- a/sass/style.scss
+++ b/sass/style.scss
@@ -487,6 +487,11 @@ header{
         cursor: pointer;
         padding: 0 8px;
         color: var(--icon_lightblue);
+        height: 20px;
+        display: inline-block;
+        span{
+            font-size: 20px;
+        }
     }
 }
 
@@ -509,6 +514,7 @@ header{
     font-size: 28px;
     color: var(--icon_lightblue);
     span{
+        font-size: 28px;
         font-weight: 300;
     }
 }
@@ -539,7 +545,7 @@ footer{
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         align-items: flex-start;
-        gap: 40px;
+        gap: 30px;
         padding: 0 0 40px;
         box-sizing: border-box;
         ul{
@@ -573,7 +579,7 @@ footer{
         color: var(--txt_cuerpo_light);
         position: relative;
         &::before{
-            content: '\f077';
+            content: '\f078';
             position: absolute;
             font-family: 'Font Awesome 5 Pro';
             right: 0;
@@ -1638,6 +1644,29 @@ button[type=submit]{
     }
 }
 
+.cont_search_mobile{
+    display: none;
+    width: 100%;
+    grid-column: 1/3;
+    display: grid;
+    grid-template-columns: 60px 1fr;
+    align-items: center;
+    justify-content: center;
+    padding: 14px 0 0;
+    input{
+        height: 36px;
+        border: 0;
+        outline: 0;
+        background-color: #efefef;
+        border-radius: 0 100px 100px 0;
+        padding: 8px;
+        box-sizing: border-box;
+    }
+    button{
+        min-width: initial;
+        border-radius: 100px 0 0 100px;
+    }
+}
 
 
 
@@ -2036,5 +2065,12 @@ RESPONSIVE DESIGN
     }
     .cont_items_bene .itm_bene{
         text-align: left;
+    }
+    footer .tel_bl{
+        align-items: flex-start;
+        flex-direction: column;
+        span{
+            display: none;
+        }
     }
 }
