--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --color_pri:#009EE2;
   --txt_cta_light:#FFFFFF;
@@ -1713,6 +1714,165 @@ button[type=submit] {
   border-radius: 100px 0 0 100px;
 }
 
+/* DISEÑO INTERNA NUESTROS PROFESIONALES */
+.s_direccion_cient {
+  background: #F4F4F4;
+  margin: -10px 0 0;
+  position: relative;
+  z-index: 1;
+  padding: 40px 0;
+  box-sizing: border-box;
+}
+
+.c_direccion_cient {
+  width: 100%;
+  max-width: 929px;
+  position: relative;
+  margin: -50px auto 0;
+  padding: 40px;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+  background: #FFFFFF;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+  transform: translateY(-40px);
+  border-radius: 8px;
+}
+.c_direccion_cient picture {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.c_direccion_cient picture img {
+  max-width: 94px;
+  max-height: 94px;
+  border-radius: 100px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.c_direccion_cient picture label {
+  display: inline-block;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--color_pri);
+}
+.c_direccion_cient .desc_cient {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+.c_direccion_cient .desc_cient h2 {
+  margin: 0 0 10px;
+  text-align: left;
+}
+
+.s_equipo_medico {
+  background: #F4F4F4;
+  padding: 0 0 80px;
+  box-sizing: border-box;
+}
+
+.slider_equipo_med {
+  position: relative;
+  padding: 0 60px;
+  box-sizing: border-box;
+}
+.slider_equipo_med .swiper-slide {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  background: var(--bg_general);
+  padding: 30px;
+  box-sizing: border-box;
+}
+.slider_equipo_med .swiper-slide picture {
+  display: block;
+  margin: 0 auto 20px;
+  max-width: 106px;
+  max-height: 106px;
+  border-radius: 100px;
+  overflow: hidden;
+}
+.slider_equipo_med .swiper-slide h4, .slider_equipo_med .swiper-slide h5 {
+  margin: 0;
+  font-weight: 400;
+}
+.slider_equipo_med .swiper-slide h4 {
+  color: var(--txt_cta_lightblue);
+  text-transform: uppercase;
+  font-size: 16px;
+}
+.slider_equipo_med .swiper-slide h5 {
+  color: #3D3D3D;
+  font-size: 16px;
+  margin: 0 0 20px;
+}
+.slider_equipo_med .swiper-slide summary {
+  font-size: 15px;
+}
+.slider_equipo_med .swiper-slide .cont_btn {
+  margin: 20px 0 0;
+  justify-content: center;
+}
+
+.s_nuestro_equipo {
+  padding: 60px 0 0;
+}
+.s_nuestro_equipo .desc_section {
+  display: block;
+  width: 100%;
+  max-width: 740px;
+  margin: 30px auto;
+  text-align: center;
+}
+.s_nuestro_equipo .c_icon_equipos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+}
+
+.slider_n_equipo {
+  position: relative;
+  padding: 0 60px;
+  box-sizing: border-box;
+}
+
+.c_icon_equipos {
+  padding: 30px 0 60px;
+}
+
+.card_i_equipo {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  justify-content: center;
+  justify-items: center;
+  box-sizing: border-box;
+}
+.card_i_equipo picture {
+  max-width: 40px;
+  width: 100%;
+}
+.card_i_equipo label {
+  color: var(--color_pri);
+  font-size: 18px;
+  text-align: center;
+}
+
+.c_nuestro_equipo .cont_btn {
+  padding: 40px 0;
+  box-sizing: border-box;
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
@@ -2097,6 +2257,39 @@ RESPONSIVE DESIGN
     right: -54px;
     border-radius: 8px 8px 0 0;
   }
+
+  .c_direccion_cient {
+    transform: translateY(0);
+    margin: 0;
+  }
+
+  .s_direccion_cient {
+    margin: 0;
+  }
+
+  .s_header_int > .center {
+    margin: 0 0 40px;
+  }
+
+  .slider_equipo_med {
+    padding: 0 14px;
+  }
+
+  .slider_n_equipo {
+    padding: 0 16px;
+  }
+
+  .slider_n_equipo .swiper-button-next, .slider_n_equipo .swiper-button-prev {
+    top: 50%;
+  }
+
+  .card_i_equipo label {
+    font-size: 16px;
+  }
+
+  .s_nuestro_equipo .c_icon_equipos {
+    gap: 20px;
+  }
 }
 @media screen and (max-width: 480px) {
   header .header_nav {
@@ -2200,5 +2393,9 @@ RESPONSIVE DESIGN
   }
   footer .tel_bl span {
     display: none;
+  }
+
+  .c_direccion_cient {
+    grid-template-columns: 1fr;
   }
 }/*# sourceMappingURL=style.css.map */
